# 3DPrint_MoldGen

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  test_sphere.stl
.cursor/rules/: agent-system.mdc  moldgen-project.mdc  python-backend.mdc  react-frontend.mdc
.cursor/skills/moldgen-3d-mesh/: SKILL.md
.cursor/skills/moldgen-agent-dev/: SKILL.md
.cursor/skills/moldgen-backend/: SKILL.md
.cursor/skills/moldgen-frontend/: SKILL.md
.github/workflows/: release.yml
data/: test.stl  test_sphere.stl
docs/: 01-research.md  02-architecture.md  03-algorithms.md  04-modules.md  05-tech-stack.md  06-roadmap.md  07-ai-prompts.md  08-agent-system.md  09-deployment.md  10-local-models.md  11-adaptive-parting.md  error-log.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/hdri/: README.txt
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/hooks/: useAdvancedApi.ts  useAgentApi.ts  useAgentEvents.ts  useAnalysisApi.ts  useBackendStatus.ts  useExportApi.ts  useGenerateApi.ts  useInsertApi.ts  useKeyboardShortcuts.ts  useModelApi.ts  (+5 more)
moldgen/: __init__.py  __main__.py  config.py  main.py
moldgen/ai/: __init__.py  agent_base.py  chat.py  execution_engine.py  image_gen.py  local_models.py  memory.py  model_gen.py  service_manager.py  tool_handlers.py  tool_registry.py  vision.py
moldgen/api/: __init__.py  websocket.py
moldgen/core/: __init__.py  analysis.py  distance_field.py  fea.py  flow_sim.py  gating.py  insert_generator.py  interference.py  lattice.py  material.py  mesh_data.py  mesh_editor.py  mesh_io.py  mesh_repair.py  mold_builder.py  optimizer.py  orientation.py  parting.py  topology_opt.py  tpms.py
moldgen/gpu/: __init__.py  device.py  fallback.py  flow_kernel.py  ray_cast.py  sdf.py
moldgen/models/: database.py
moldgen/utils/: logger.py
scripts/: _server_entry.py  build-desktop.ps1  build_backend.py  generate-icons.py  generate-update-json.py
tests/: test_advanced.py  test_agent.py  test_ai_api.py  test_analysis.py  test_api.py  test_insert.py  test_mesh.py  test_mold.py  test_simulation.py
(+59 files in other folders)
