[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moldgen"
version = "0.1.0"
description = "AI 驱动的医学教具智能模具生成工作站"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "openai>=1.30.0",
    "dashscope>=1.17.0",
]

[project.optional-dependencies]
gpu = [
    "numba>=0.59.0",
    "cupy-cuda12x>=13.0.0",
    "cubvh>=0.1.0",
]
mesh = [
    "trimesh>=4.0.0",
    "manifold3d>=2.5.0",
    "scikit-image>=0.22.0",
    "pyassimp>=5.2.0",
    "open3d>=0.18.0",
    "meshio>=5.3.0",
    "pyvista>=0.43.0",
]
local-models = [
    "torch>=2.2.0",
    "diffusers>=0.30.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.23.0",
    "Pillow>=10.0.0",
    "tsr>=0.1.0",
]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["moldgen*"]

[project.scripts]
moldgen = "moldgen.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
